src/tests/snapshots/cclv__tests__view_snapshots__bug_search_match_text_not_highlighted.snap
---
source: src/tests/view_snapshots.rs
expression: output
---
┌Conversations─────────────────────────────────────────────────────────────────┐
│ Main                                                                         │
└──────────────────────────────────────────────────────────────────────────────┘
┌Main (3 entries)──────────────────────────────────────────────────────────────┐
│                                                                              │
││  2 Search for skill documentation                                           │
│                                                                              │
││  3 I found the skill documentation. The skill feature allows users to load s│
││    pecialized behaviors.                                                    │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
┌Search (active)───────────────────────────────────────────────────────────────┐
│skill                                                                         │
└──────────────────────────────────────────────────────────────────────────────┘
[LIVE] Wrap: On | q: Quit | ?: Help | n: Next | N: Prev | Esc: Exit
