src/tests/snapshots/cclv__tests__view_snapshots__bug_subagent_mouse_click_no_effect.snap
---
source: src/tests/view_snapshots.rs
expression: output_after_click
---
┌Conversations─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│ Main │ toolu_01DW7AVW3cYPEjGLyZesCcxS │ toolu_01K8kEwV7rgfGnhz2Uvxdmjr │ toolu_01TtbNRBcQWN8sTuNDK4Cu7T                                                                                              │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌toolu_01DW7AVW3cYPEjGLyZesCcxS [Haiku] (25 entries)───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
││  1 Analyze the current codebase state for implementing split pane layout. I need to understand:                                                                                                     │
││                                                                                                                                                                                                     │
││    1. What files exist in src/view/ currently?                                                                                                                                                      │
││    2. What does src/state/app_state.rs contain (AppState struct, FocusPane enum)?                                                                                                                   │
││    3. What does src/main.rs look like (current event loop, rendering)?                                                                                                                              │
││    4. Does src/view/message.rs exist? If so, what widgets does it provide?                                                                                                                          │
││    5. What does src/model/session.rs contain (Session struct, AgentConversation)?                                                                                                                   │
││    6. What ratatui patterns are already used in the codebase?                                                                                                                                       │
││                                                                                                                                                                                                     │
││    Return a structured report as:                                                                                                                                                                   │
││                                                                                                                                                                                                     │
││    FILES IN src/view/:                                                                                                                                                                              │
││    - list of files                                                                                                                                                                                  │
││                                                                                                                                                                                                     │
││    APPSTATE STRUCTURE:                                                                                                                                                                              │
││    - struct fields                                                                                                                                                                                  │
││    - FocusPane variants                                                                                                                                                                             │
││                                                                                                                                                                                                     │
││    MAIN.RS EVENT LOOP:                                                                                                                                                                              │
││    - summary of current loop                                                                                                                                                                        │
││    - current rendering approach                                                                                                                                                                     │
││                                                                                                                                                                                                     │
││    MESSAGE.RS STATUS:                                                                                                                                                                               │
││    - exists: yes/no                                                                                                                                                                                 │
││    - widgets provided if exists                                                                                                                                                                     │
││                                                                                                                                                                                                     │
││    SESSION MODEL:                                                                                                                                                                                   │
││    - Session struct fields                                                                                                                                                                          │
││    - AgentConversation if exists                                                                                                                                                                    │
││                                                                                                                                                                                                     │
││    RATATUI PATTERNS:                                                                                                                                                                                │
││    - observed patterns                                                                                                                                                                              │
││                                                                                                                                                                                                     │
││    Focus on facts, not recommendations.                                                                                                                                                             │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
[LIVE] Wrap: On | q: Quit | ?: Help | /: Search | s: Stats | Tab: Cycle panes
