src/tests/snapshots/cclv__tests__view_snapshots__bug_subagent_scroll_after.snap
---
source: src/tests/view_snapshots.rs
expression: output_after.clone()
---
┌Conversations─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│ Main │ toolu_01DW7AVW3cYPEjGLyZesCcxS │ toolu_01K8kEwV7rgfGnhz2Uvxdmjr │ toolu_01TtbNRBcQWN8sTuNDK4Cu7T                                                                                              │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌toolu_01DW7AVW3cYPEjGLyZesCcxS [Haiku] (25 entries)───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
││  2 🔧n Tool: Glob                                                                                                                                                                                    │
││      {                                                                                                                                                                                              │
││        "pattern": "src/view/**"                                                                                                                                                                     │
││      }                                                                                                                                                                                              │
│── ↓11.6k/11.6k ↑1/7 / $0.02 | Context: 11.6k (5%) ──                                                                                                                                                 │
││  3 🔧. Tool: Glob                                                                                                                                                                                    │
││      {                                                                                                                                                                                              │
││        "pattern": "src/**/*.rs"                                                                                                                                                                     │
││      }                                                                                                                                                                                              │
│── ↓11.6k/11.6k ↑1/7 / $0.02 | Context: 11.6k (5%) ──                                                                                                                                                 │
││  4 🔧. Tool: Read                                                                                                                                                                                    │
││      {                                                                                                                                                                                              │
││        "file_path": "/home/claude/cclv/src"                                                                                                                                                         │
││      }                                                                                                                                                                                              │
│── ↓11.6k/11.6k ↑1/10 / $0.02 | Context: 11.6k (5%) ──                                                                                                                                                │
││  5 EISDIR: illegal operation on a directory, read                                                                                                                                                   │
│                                                                                                                                                                                                      │
││  6 /home/claude/cclv/src/view/mod.rs                                                                                                                                                                │
│                                                                                                                                                                                                      │
││  7 /home/claude/cclv/src/model/identifiers.rs                                                                                                                                                       │
││    /home/claude/cclv/src/model/usage.rs                                                                                                                                                             │
││    /home/claude/cclv/src/model/session.rs                                                                                                                                                           │
││    (+18 more lines)                                                                                                                                                                                 │
│                                                                                                                                                                                                      │
││  8 🔧h Tool: Read                                                                                                                                                                                    │
││      {                                                                                                                                                                                              │
││        "file_path": "/home/claude/cclv/src/view/mod.rs"                                                                                                                                             │
││      }                                                                                                                                                                                              │
│── ↓641/12.3k ↑1/13 / $0.02 | Context: 12.3k (6%) ──                                                                                                                                                  │
││  9 🔧a Tool: Read                                                                                                                                                                                    │
││      {                                                                                                                                                                                              │
││        "file_path": "/home/claude/cclv/src/state/app_state.rs"                                                                                                                                      │
││      }                                                                                                                                                                                              │
│── ↓641/12.3k ↑1/15 / $0.02 | Context: 12.3k (6%) ──                                                                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
[LIVE] │ Session 24/24 │ Wrap: On | q: Quit | ?: Help | /: Search | s: Stats | Tab: Cycle panes
